correction alignement

--- a/VEHICULES_DOCCASION_INC/assets/styles/styles.css
+++ b/VEHICULES_DOCCASION_INC/assets/styles/styles.css
@@ -17,7 +17,7 @@ body {
     box-sizing: border-box;
     font-family: 'Overpass', sans-serif;
     overflow-x: hidden;
-    background-image: url(../images/lionBG.svg);
+    background-image: url(../images/lionBG2.svg);
     background-size: cover;
 }
 
